[project]
name = "contentforge"
version = "0.0.1"
description = "Cross-DCC SDK for professional pipeline development. Build production-ready plugins for Maya/Blender/Unreal/Unity and toolsets for Substance/Houdini with unified API abstraction, version tolerance mechanisms, and CI-ready automation workflows."

readme = "README.md"

requires-python = ">=3.12,<3.14"

license = { text = "MIT" }

keywords = ["dcc", "plugin-development", "content-tools"]

authors = [
    { name = "Content Forge", email = "ContentForgeTeam@outlook.com" }
]

maintainers = [
    { name = "Content Forge", email = "ContentForgeTeam@outlook.com" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "click (>=8.1.8,<9.0.0)"

]

[project.urls]
Homepage = "https://contentforge.org"
Documentation = "https://github.com/ContentForgeFramework/contentforge#readme"
Repository = "https://github.com/ContentForgeFramework/contentforge"
Issues = "https://github.com/ContentForgeFramework/contentforge/issues"

[tool.poetry]
include = [
    "LICENSE",
]

exclude = [
    "tests/**/*",
    "docs/build",
    "build/**/*",
    ".github/workflows/*"
]

packages = [
    { include = "contentforge", from = "src" }
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
pyyaml = "^6.0.2"
tomli = "^2.2.1"
python-dotenv = "^1.1.0"
mypy = "^1.15.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"


[tool.poetry.group.ui.dependencies]
pyside6 = "^6.9.0"


[tool.poetry.group.doc.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.11"
mkdocstrings = "^0.29.1"
mkdocstrings-python = "^1.16.10"
mike = "^2.1.3"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.2"
mkdocs-section-index = "^0.3.10"
mkdocs-glightbox = "^0.4.0"
pymdown-extensions = "^10.14.3"
mkdocs-autorefs = "^1.4.1"
griffe = "^1.7.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
